fix on scrollbar at user links page

--- a/src/styles/pages/userLinksPage/utils/layout.scss
+++ b/src/styles/pages/userLinksPage/utils/layout.scss
@@ -3,7 +3,7 @@
     color: var(--user-contrast-color);
     font-family: var(--user-font);
     background: linear-gradient(to bottom, var(--user-bg-color), var(--user-bg-secondary-color));
-    overflow-y: auto;
+    overflow-y: scroll;
 
     canvas {
         touch-action: none;
